src/test/error/provide2.lns
class Hoge {
}

pub class Hoge2 {
}

pub let var = 1;
pub let var2 = 1;
pub let var3 = 1;

provide Hoge;
